# smms-webp-upload

./: .gitignore  Cargo.toml  Dockerfile  README.md  cspell.json  jest.config.js  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
.github/workflows/: deploy.yml
app/: config.tsx  index.css  index.tsx
app/components/: ImageList.tsx  Upload.tsx
app/core/: service.ts
src/: assets.rs  lib.rs  main.rs  res_helper.rs
web/: config.html  index.html  package.json  style.css  tailwind.config.js  webpack.config.js
web/public/: index.html
web/src/: index.tsx
web/src/components/: ImageList.tsx  Upload.tsx
web/src/core/: service.ts
