[package]
name = "smms-webp-upload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "blocking", "multipart"] }
log = "0.4.17"
env_logger = "0.10.0"
dotenv = "0.15.0"
tokio = { version =  "1.27.0", features = ["rt-multi-thread", "macros", "fs"] }
axum = {version = "0.6.18", features = ["multipart", "headers"]}
image = {version = "0.24.6", features=["webp-encoder"]}
serde_json = "1.0.99"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }

[dependencies.uuid]
version = "1.4.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.5"
